--- a/Angular/src/app/pages/claims/details/details.component.scss
+++ b/Angular/src/app/pages/claims/details/details.component.scss
@@ -1,184 +1,212 @@
 @import '../../../app.component.scss';
+
 .details-container {
 	width: 100%;
 	height: 100%;
 	background-color: $main-bg-color;
-  }
-  
-  .details-sidenav-content {
+}
+
+.details-sidenav-content {
 	height: 100%;
-  }
-  
-  .details-sidenav {
+}
+
+.details-sidenav {
 	background-color: $main-bg-color;
 	width: 50%;
 	padding: 20px;
-		.header{
-			display: flex;
-			justify-content: space-between;
-			height: 50px;
-			.title{
-				font-size: 20px;
-				font-weight: 600;
-				margin: 0;
-				color: $main-text-color;
-			}
-			.close{
-				color: $main-text-color;
-				cursor: pointer;
-			}
-		}
-		.content, .status-content{
+
+	.header {
+		display: flex;
+		justify-content: space-between;
+		height: 50px;
+
+		.title {
+			font-size: 20px;
+			font-weight: 600;
+			margin: 0;
 			color: $main-text-color;
-			background-color: $main-component-color;
-			border-radius: 10px;
-			margin-top: 20px;
-			// height: 100%;
-			padding: 20px;
-			.title{
-				font-size: 20px;
-				font-weight: 600;
-				margin: 0;
-				color: $main-text-color;
-			}
-			.details{
-				margin-top: 20px;
-				.detail{
-					display: flex;
-					justify-content: space-between;
-					margin-bottom: 10px;
-					.label{
-						font-size: 16px;
-						font-weight: 500;
-						color: $main-text-color;
-					}
-					.value{
-						font-size: 12px;
-						color: $main-text-color;
-					}
-				}
-			}
-			.comments{
-				margin-top: 20px;
-				height: 100%;
-				background-color: $secondary-bg-color;
-				padding-bottom: 20px;
-
-				&-content{
-					max-height: 200px;
-					// height: 100%;
-					overflow-y: scroll;
-				}
-
-				.form{
-					display: flex;
-					justify-content: space-between;
-					margin-top: 20px;
-					box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-					padding: 10px 10px;
-					border-radius: $border-radius;
-					.avatar img {
-						width: 50px;
-						height: 50px;
-						border-radius: 50%;
-						background-color: $secondary-component-color;
-						margin-right: 20px;
-					}
-					.input{
-						width: 80%;
-						height: 40px;
-						border-radius: 10px;
-						border: none;
-						padding: 0 10px;
-						background-color: $secondary-component-color;
-						color: $main-text-color;
-					}
-					.button{
-						width: 15%;
-						height: 40px;
-						border-radius: 10px;
-						border: none;
-						background-color: $secondary-component-color;
-						color: $main-text-color;
-						cursor: pointer;
-					}
-				}
-				.title{
-					font-size: 20px;
-					font-weight: 600;
-					margin: 0;
-					color: $secondary-text-color;
-					margin-bottom: 10px;
-				}
-				.comment{
-					border-radius: $border-radius;
-					box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
-					padding: 10px;
-					margin-bottom: 10px;
-					.label{
-						display: flex;
-						justify-content: space-between;
-						align-items: center;
-						margin-bottom: 10px;
-						font-size: 16px;
-						font-weight: 500;
-						color: $bg-icons-color;
-						.name{
-							display: flex;
-							align-items: center;
-							font-size: 20px;
-							font-weight: 500;
-							.avatar img{
-								width: 30px;
-								height: 30px;
-								border-radius: 10%;
-								margin-right: 10px;
-							}
-						}
-						.date{
-							font-size: 14px;
-						}
-					}
-					.value{
-						font-size: 12px;
-						color: lighten($bg-icons-color, 10%);
-					}
-				}
-			}
 		}
 
-		.status-content{
-			
+		.close {
+			color: $main-text-color;
+			cursor: pointer;
+		}
+	}
+
+	.content,
+	.status-content {
+		color: $main-text-color;
+		background-color: $main-component-color;
+		border-radius: 10px;
+		margin-top: 20px;
+		// height: 100%;
+		padding: 20px;
+
+		.title {
+			font-size: 20px;
+			font-weight: 600;
+			margin: 0;
+			color: $main-text-color;
+		}
+
+		.details {
 			margin-top: 20px;
-			.mat-card{
-				margin-bottom: 20px;
-				.mat-card-header{
-					&-image {
-						// background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-						background-size: cover;
-					}
-					.mat-card-title{
-						font-size: 20px;
-						font-weight: 600;
-					}
-				}
-				
-			}
-			.statuses{
-				margin-top: 20px;
-			}
-			.status{
+
+			.detail {
+				display: flex;
+				justify-content: space-between;
 				margin-bottom: 10px;
-				.label{
+
+				.label {
 					font-size: 16px;
 					font-weight: 500;
-					color: $secondary-component-color;
+					color: $main-text-color;
 				}
-				.value{
+
+				.value {
 					font-size: 12px;
-					color: $secondary-text-color;
+					color: $main-text-color;
 				}
 			}
 		}
-  }
-  
+
+		.comments {
+			margin-top: 20px;
+			height: 100%;
+			background-color: $secondary-bg-color;
+			padding-bottom: 20px;
+
+			&-content {
+				max-height: 200px;
+				// height: 100%;
+				overflow-y: scroll;
+			}
+
+			.form {
+				display: flex;
+				justify-content: space-between;
+				margin-top: 20px;
+				box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+				padding: 10px 10px;
+				border-radius: $border-radius;
+
+				.avatar img {
+					width: 50px;
+					height: 50px;
+					border-radius: 50%;
+					background-color: $secondary-component-color;
+					margin-right: 20px;
+				}
+
+				.input {
+					width: 80%;
+					height: 40px;
+					border-radius: 10px;
+					border: none;
+					padding: 0 10px;
+					background-color: $secondary-component-color;
+					color: $main-text-color;
+				}
+
+				.button {
+					width: 15%;
+					height: 40px;
+					border-radius: 10px;
+					border: none;
+					background-color: $secondary-component-color;
+					color: $main-text-color;
+					cursor: pointer;
+				}
+			}
+
+			.title {
+				font-size: 20px;
+				font-weight: 600;
+				margin: 0;
+				color: $secondary-text-color;
+				margin-bottom: 10px;
+			}
+
+			.comment {
+				border-radius: $border-radius;
+				box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
+				padding: 10px;
+				margin-bottom: 10px;
+
+				.label {
+					display: flex;
+					justify-content: space-between;
+					align-items: center;
+					margin-bottom: 10px;
+					font-size: 16px;
+					font-weight: 500;
+					color: $bg-icons-color;
+
+					.name {
+						display: flex;
+						align-items: center;
+						font-size: 20px;
+						font-weight: 500;
+
+						.avatar img {
+							width: 30px;
+							height: 30px;
+							border-radius: 10%;
+							margin-right: 10px;
+						}
+					}
+
+					.date {
+						font-size: 14px;
+					}
+				}
+
+				.value {
+					font-size: 12px;
+					color: lighten($bg-icons-color, 10%);
+				}
+			}
+		}
+	}
+
+	.status-content {
+
+		margin-top: 20px;
+
+		.mat-card {
+			margin-bottom: 20px;
+
+			.mat-card-header {
+				&-image {
+					// background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+					background-size: cover;
+				}
+
+				.mat-card-title {
+					font-size: 20px;
+					font-weight: 600;
+				}
+			}
+
+		}
+
+		.statuses {
+			margin-top: 20px;
+		}
+
+		.status {
+			margin-bottom: 10px;
+
+			.label {
+				font-size: 16px;
+				font-weight: 500;
+				color: $secondary-component-color;
+			}
+
+			.value {
+				font-size: 12px;
+				color: $secondary-text-color;
+			}
+		}
+	}
+}
