--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -77,9 +77,7 @@
 			</a>
 
 
-			<a mat-list-item class="last-item" (click)="
-				isExpanded = !isExpanded;
-			">
+			<a mat-list-item class="last-item">
 				<div class="card">
 					<div class="card-body">
 						<h5 class="card-title">Let's start</h5>
