[angular] add board to home component

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -1,3 +1,15 @@
 <app-navbar>
 	<app-topbar></app-topbar>
+	<div class="board">
+		<div class="board-wrapper">
+			<div class="card">
+				<h3 class="card-header">Shadow</h3>
+				<div class="card-body">
+					<h5 class="card-title">Special title treatment</h5>
+				</div>
+				<img src="../../../assets/moto.png">
+				<div class="float-right"></div>
+			</div>
+		</div>
+	</div>
 </app-navbar>
