[angular] fix grid for board

--- a/Angular/src/app/pages/home/home.component.scss
+++ b/Angular/src/app/pages/home/home.component.scss
@@ -28,3 +28,13 @@
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
+
+.row {
+	text-align: center;
+	// margin: 5%;
+}
+
+.col-md-2 {
+	margin-top: 0%;
+	height: 100px;
+}
