--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -4,11 +4,38 @@
 		<div class="board-wrapper">
 			<div class="card">
 				<h3 class="card-header">Shadow</h3>
-				<div class="card-body">
+				<!-- <div class="card-body">
 					<h5 class="card-title">Special title treatment</h5>
+				</div> -->
+				<!-- <img src="../../../assets/moto.png">
+				<div class="float-right"></div> -->
+				<!-- <mat-grid-list cols="4" rowHeight="2:1">
+					<mat-grid-tile>Your motocyle</mat-grid-tile>
+					<mat-grid-tile>Your motocycle</mat-grid-tile>
+					<mat-grid-tile><img src="../../../assets/moto.png" height="75px"></mat-grid-tile>
+					<mat-grid-tile></mat-grid-tile>
+					<mat-grid-tile>Your motocycle</mat-grid-tile>
+					<mat-grid-tile>Your motocycle</mat-grid-tile>
+					<mat-grid-tile></mat-grid-tile>
+					<mat-grid-tile>8</mat-grid-tile>
+				</mat-grid-list> -->
+				<div class="row">
+					<div class="col-md-6">
+						<div class="pb-3">
+							<div class="row">
+								<div class="col-md-6">Your motocycle</div>
+								<div class="col-md-6">Your motocycle</div>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-6">Your motocycle</div>
+							<div class="col-md-6">Your motocycle</div>
+						</div>
+					</div>
+					<div class="col-md-3"><img src="../../../assets/moto.png" height="95px"></div>
+					<div class="col-md-2"><img src="../../../assets/moto.png" height="75px"></div>
+
 				</div>
-				<img src="../../../assets/moto.png">
-				<div class="float-right"></div>
 			</div>
 		</div>
 	</div>
