[angular] install battery-indicator component

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -34,7 +34,8 @@
 					</div>
 					<div class="col-md-3"><img src="../../../assets/moto.png" height="95px"></div>
 					<div class="col-md-2"><img src="../../../assets/moto.png" height="75px"></div>
-
+					<battery-indicator percentage="85">
+					</battery-indicator>
 				</div>
 			</div>
 		</div>
