add user to _status rel pre update

--- a/Angular/src/app/pages/claims/details/details.component.html
+++ b/Angular/src/app/pages/claims/details/details.component.html
@@ -108,7 +108,7 @@
 										</div>
 										<div class="col-4 status">
 											<p class="d-inline label fw-semibold">Author: </p>
-											<p class="d-inline value ml-2"> Admin </p>
+											<p class="d-inline value ml-2">{{item.author}}</p>
 										</div>
 									</div>
 								</mat-card-content>
