[Angular] add battery-usage-chart

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -40,6 +40,8 @@
 
 						<battery-percentage [color]="color" [percentage]="percentage"></battery-percentage>
 					</div>
+					<app-chart-battery-usage></app-chart-battery-usage>
+					<!-- <app-chart-battery-usage></app-chart-battery-usage> -->
 					<!-- <battery-percentage [color]="color" [percentage]="percentage"></battery-percentage> -->
 
 					<!-- <battery-indicator percentage="85">
