[angular] creating card for battery-usage-chart

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -40,13 +40,19 @@
 
 						<battery-percentage [color]="color" [percentage]="percentage"></battery-percentage>
 					</div>
-					<app-chart-battery-usage></app-chart-battery-usage>
+
 					<!-- <app-chart-battery-usage></app-chart-battery-usage> -->
 					<!-- <battery-percentage [color]="color" [percentage]="percentage"></battery-percentage> -->
 
 					<!-- <battery-indicator percentage="85">
 					</battery-indicator> -->
 				</div>
+			</div>
+		</div>
+		<div class="board-wrapper">
+			<div class="card">
+				<app-chart-battery-usage></app-chart-battery-usage>
+
 			</div>
 		</div>
 	</div>
