--- a/Angular/src/app/pages/claims/details/details.component.html
+++ b/Angular/src/app/pages/claims/details/details.component.html
@@ -46,9 +46,9 @@
 									<div class="name">
 										<div class="avatar">
 											<img [src]="comment.avatar??'https://randomuser.me/api/portraits/men/1.jpg'"
-												[alt]="comment.name">
+												[alt]="comment?.user?.name">
 										</div>
-										{{comment.name??'John Doe'}}
+										{{comment?.user?.name??'John Doe'}}
 									</div>
 									<div class="date">{{comment.created | date:'longDate' }}</div>
 								</div>
