--- a/Angular/src/app/layout/navbar/navbar.component.html
+++ b/Angular/src/app/layout/navbar/navbar.component.html
@@ -6,19 +6,27 @@
 		</div>
 		<div class="separator"></div>
 		<mat-nav-list class="dashboard">
-			<a mat-list-item class="my-3" (click)="toggleActive('/')">
+			<a [matTooltip]="isExpanded? '' : 'Dashboard'" matTooltipPosition="right" mat-list-item class="my-3" (click)="toggleActive('/')">
 				<div matLine class="item" [ngClass]="{'active': current === '/','open':isExpanded}">
 					<mat-icon class="icon">grid_view</mat-icon>
 					<p *ngIf="isExpanded">Dashboard</p>
 				</div>
 			</a>
+			
+			<a [matTooltip]="isExpanded? '' :'Affect claims'" matTooltipPosition="right" mat-list-item class="my-3" (click)="toggleActive('/chef')">
+				<div matLine class="item" [ngClass]="{'active': current === '/chef','open':isExpanded}">
+					<mat-icon class="icon">move_down</mat-icon>
+					<p *ngIf="isExpanded">Affect Claims</p>
+				</div>
+			</a>
 
-			<a mat-list-item class="my-3" (click)="toggleActive('/claims')">
+			<a [matTooltip]="isExpanded? '' : 'Claims'" matTooltipPosition="right" mat-list-item class="my-3" (click)="toggleActive('/claims')">
 				<div matLine class="item" [ngClass]="{'active': current === '/claims','open':isExpanded}">
 					<mat-icon class="icon">home</mat-icon>
 					<p *ngIf="isExpanded">Claims</p>
 				</div>
 			</a>
+
 
 			<a mat-list-item class="my-3" (click)="toggleActive('/home2')">
 				<div matLine class="item" [ngClass]="{'active': current === '/home2','open':isExpanded}">
@@ -26,6 +34,7 @@
 					<p *ngIf="isExpanded">Contact</p>
 				</div>
 			</a>
+
 
 			<a mat-list-item class="last-item" (click)="
 				isExpanded = !isExpanded;
