--- a/Angular/src/app/pages/home/home.component.scss
+++ b/Angular/src/app/pages/home/home.component.scss
@@ -6,28 +6,171 @@
 	flex-grow: 1;
 	min-width: 0;
 	min-height: 0;
+	width: 100%;
 }
+
 
 .board-wrapper {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: left;
 	flex-grow: 1;
 	overflow-x: auto;
 	background-color: $main-component-color;
 	border-radius: 9px;
+	width: 70%;
+}
+
+.container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	flex-grow: 0;
+	background-color: $main-component-color;
+	border-radius: 9px;
+
 }
 
 .card {
 	text-align: left;
-	width: 60%;
+	// width: 60%;
 	background-color: black;
 	color: white;
 	border: 0ch;
 	margin-left: 15px;
+	margin-right: 15px;
 	margin-top: 15px;
 	margin-bottom: 15px;
 }
+
+.support {
+	background-color: black;
+	width: 30%;
+
+}
+
+.login100-form-title {
+	display: block;
+	margin-top: 50px;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	// font-family: Poppins-Regular;
+	font-size: 30px;
+	color: #ffffff;
+	line-height: 1.2;
+	text-align: center;
+}
+
+.login100-form-title i {
+	font-size: 60px;
+}
+
+.wrap-input100 {
+	width: 100%;
+	position: relative;
+	// border-bottom: 2px solid #adadad;
+	margin-bottom: 37px;
+	border-radius: 9px;
+}
+
+.input100 {
+	border-radius: 9px;
+	font-family: Poppins-Regular;
+	font-size: 15px;
+	color: #555555;
+	line-height: 1.2;
+	margin: 5px;
+
+	display: block;
+	width: 80%;
+	height: 45px;
+	background: white;
+	padding: 0 5px;
+	margin-left: 15px;
+
+}
+
+.validate-input {
+	position: relative;
+}
+
+.focus-input100 {
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	pointer-events: none;
+}
+
+.focus-input100::before {
+	content: "";
+	// content: "";
+	display: block;
+	position: absolute;
+	bottom: -2px;
+	left: 0;
+	width: 0;
+	height: 2px;
+
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+
+	background: #c4c8dc;
+	background: -webkit-linear-gradient(left, #21d4fd, #b721ff);
+	background: -o-linear-gradient(left, #21d4fd, #b721ff);
+	background: -moz-linear-gradient(left, #21d4fd, #b721ff);
+	background: linear-gradient(left, #21d4fd, #b721ff);
+}
+
+.input-form {
+	// margin-left: 15px;
+	padding: 0 5px;
+	margin-left: 15px;
+}
+
+.subject-input {
+	height: 100px;
+}
+
+.focus-input100::after {
+	font-family: Poppins-Regular;
+	font-size: 15px;
+	color: #999999;
+	line-height: 1.2;
+
+	content: attr(data-placeholder);
+	display: block;
+	width: 100%;
+	position: absolute;
+	top: 16px;
+	left: 0px;
+	padding-left: 5px;
+
+	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	transition: all 0.4s;
+}
+
+.input100:focus+.focus-input100::after {
+	top: -15px;
+}
+
+.input100:focus+.focus-input100::before {
+	width: 100%;
+}
+
+.has-val.input100+.focus-input100::after {
+	top: -15px;
+}
+
+.has-val.input100+.focus-input100::before {
+	width: 100%;
+}
+
 
 .row {
 	text-align: center;
