--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -5,19 +5,31 @@
 			<div class="container">
 				<div class="board-wrapper ">
 					<div class="card">
-						<h3 class="card-header">Shadow</h3>
+						<h1 class="card-header" style="font-size:bold ;">Shadow</h1>
 
 						<div class="row">
 							<div class="col-md-6">
 								<div class="pb-3">
 									<div class="row">
-										<div class="col-md-6">Your motocycle</div>
-										<div class="col-md-6">Your motocycle</div>
+										<div class="col-md-6">
+											<div>
+
+												Your motorcycle
+											</div>
+
+										</div>
+										<div class="col-md-6">
+											<mat-icon> pin_drop</mat-icon>Your motorcycle
+										</div>
 									</div>
 								</div>
 								<div class="row">
-									<div class="col-md-6">Your motocycle</div>
-									<div class="col-md-6">Your motocycle</div>
+									<div class="col-md-6">
+										<mat-icon>settings</mat-icon>Your motorcycle
+									</div>
+									<div class="col-md-6">
+										<mat-icon>notifications</mat-icon>Your motorcycle
+									</div>
 								</div>
 							</div>
 							<div class="col-md-3"><img src="../../../assets/moto.png" height="95px"></div>
