[angular] styling chart title

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -11,14 +11,15 @@
 							<div class="col-md-6">
 								<div class="pb-3">
 									<div class="row">
-										<div class="col-md-6">
+
+										<div class="col-md-6"> <br />
 											<div>
 
 												Your motorcycle
 											</div>
 
 										</div>
-										<div class="col-md-6">
+										<div class="col-md-6"> <br />
 											<mat-icon> pin_drop</mat-icon>Your motorcycle
 										</div>
 									</div>
@@ -32,7 +33,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3"><img src="../../../assets/moto.png" height="95px"></div>
+							<div class="col"><img src="../../../assets/moto.png" height="150px"></div>
 							<div class="col-md-2">
 								<br />
 								<mat-icon>battery_charging_full</mat-icon>
@@ -46,6 +47,7 @@
 						</div>
 					</div>
 					<div class="card">
+						<h2 class="card-header" style="font-size:bold ;">Battery usage</h2>
 						<app-chart-battery-usage></app-chart-battery-usage>
 					</div>
 
@@ -59,18 +61,16 @@
 					<div class="wrap-input100 validate-input" data-validate="Valid email is: a@b.c">
 						<span class="input-form">Email</span>
 						<input class="input100" type="text" name="email">
-						<!-- <span class="focus-input100" data-placeholder="Email"></span> -->
+
 					</div>
 					<div class="wrap-input100 validate-input">
 						<span class="input-form">Object</span>
 						<input class="input100" type="text" name="object">
-						<!-- <span class="focus-input100" data-placeholder="Email"></span> -->
 					</div>
 					<div class="wrap-input100 validate-input">
 						<span class="input-form subject-input">Subject</span>
 						<!-- <input class="input100" type="textarea"> -->
 						<textarea id="w3review" class="input100" name="w3review" rows="4" cols="50"></textarea>
-						<!-- <span class="focus-input100" data-placeholder="Email"></span> -->
 					</div>
 					<button class="btn btn-primary"
 						style="width:50% ;border-radius: 15px; margin-left:70px ; margin-bottom: 15px;"
