--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
 		<div class="board">
 			<div class="container">
 				<div class="board-wrapper ">
-					<div class="card">
+					<div class="card ">
 						<h1 class="card-header" style="font-size:bold ;">Shadow</h1>
 
 						<div class="row">
@@ -52,7 +52,7 @@
 					</div>
 
 				</div>
-				<div class="support card">
+				<div class="support card  gradient-custom-2">
 
 					<span class="login100-form-title p-b-26">
 						Support
