[angular] height textarea

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -70,7 +70,8 @@
 					<div class="wrap-input100 validate-input">
 						<span class="input-form subject-input">Subject</span>
 						<!-- <input class="input100" type="textarea"> -->
-						<textarea id="w3review" class="input100" name="w3review" rows="4" cols="50"></textarea>
+						<textarea id="w3review" class="input100" name="w3review" rows="4" cols="100"
+							style="height: 150px;"></textarea>
 					</div>
 					<button class="btn btn-primary"
 						style="width:50% ;border-radius: 15px; margin-left:80px ; margin-bottom: 15px;"
