[angular] center icons

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -14,22 +14,22 @@
 
 										<div class="col-md-6"> <br />
 											<div>
-
 												Your motorcycle
 											</div>
 
 										</div>
+
 										<div class="col-md-6"> <br />
-											<mat-icon> pin_drop</mat-icon>Your motorcycle
+											<mat-icon style="padding-top: 3px;">pin_drop</mat-icon>Your motorcycle
 										</div>
 									</div>
 								</div>
 								<div class="row">
 									<div class="col-md-6">
-										<mat-icon>settings</mat-icon>Your motorcycle
+										<mat-icon style="padding-top: 3px;">settings</mat-icon>Your motorcycle
 									</div>
 									<div class="col-md-6">
-										<mat-icon>notifications</mat-icon>Your motorcycle
+										<mat-icon style="padding-top: 3px;">notifications</mat-icon>Your motorcycle
 									</div>
 								</div>
 							</div>
