[angular] adding buttons

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="col"><img src="../../../assets/moto.png" height="150px"></div>
+							<div class="col-md-3"><img src="../../../assets/moto.png" class="" height="150px"></div>
 							<div class="col-md-2">
 								<br />
 								<mat-icon>battery_charging_full</mat-icon>
@@ -52,6 +52,7 @@
 					</div>
 
 				</div>
+
 				<div class="support card  gradient-custom-2">
 
 					<span class="login100-form-title p-b-26">
@@ -80,8 +81,20 @@
 
 
 				</div>
+
+
 			</div>
 
+			<div class="buttons ">
+				<button class="btn btn-primary"
+					style="width:50% ;border-radius: 15px; margin:60px ; margin-bottom: 15px;"
+					type="submit">S.O.S</button>
+				<button class="btn btn-primary"
+					style="width:50% ;border-radius: 15px; margin:60px ; margin-bottom: 15px;" type="submit"></button>
+				<button class="btn btn-primary"
+					style="width:50% ;border-radius: 15px; margin:60px ; margin-bottom: 15px;" type="submit"></button>
+
+			</div>
 
 
 		</div>
