--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -13,23 +13,43 @@
 									<div class="row">
 
 										<div class="col-md-6"> <br />
-											<div>
-												Your motorcycle
+											<div class="item">
+												<p>Your motorcycle</p>
+
 											</div>
 
 										</div>
 
 										<div class="col-md-6"> <br />
-											<mat-icon style="padding-top: 3px;">pin_drop</mat-icon>Your motorcycle
+											<div class="item">
+												<mat-icon style="padding-top: 3px;" class="icon">pin_drop</mat-icon>
+
+												<p>Your motorcycle</p>
+												<!-- <mat-icon class="menu-button" [ngClass]="{'rotated' : 
+												showSubmenu}" *ngIf="isExpanded || 
+												   isShowing" style="color: white; " class="float-right">expand_more</mat-icon> -->
+											</div>
+
+
 										</div>
 									</div>
 								</div>
 								<div class="row">
+
 									<div class="col-md-6">
-										<mat-icon style="padding-top: 3px;">settings</mat-icon>Your motorcycle
+										<div class="item">
+											<mat-icon style="padding-top: 4px;" class="icon">settings</mat-icon>
+											<p>Your motorcycle</p>
+										</div>
+
 									</div>
 									<div class="col-md-6">
-										<mat-icon style="padding-top: 3px;">notifications</mat-icon>Your motorcycle
+										<div class="item">
+											<mat-icon style="padding-top: 4px;" class="icon">
+												notifications</mat-icon>
+											<p>Your motorcycle</p>
+										</div>
+
 									</div>
 								</div>
 							</div>
