add battery component

--- a/Angular/src/app/pages/home/home.component.html
+++ b/Angular/src/app/pages/home/home.component.html
@@ -53,14 +53,11 @@
 									</div>
 								</div>
 							</div>
-							<div class="col-md-3"><img src="../../../assets/moto.png" class="" height="150px"></div>
-							<div class="col-md-2">
-								<br />
-								<mat-icon>battery_charging_full</mat-icon>
-								<br />
-
-								<battery-percentage [color]="color" [percentage]="percentage">
-								</battery-percentage>
+							<div class="col-3"><img src="../../../assets/moto.png" height="150px"></div>
+							<div class="col-md-3 battery-container">
+								<h1 style="font-size:18px;margin-bottom: 0;">Battery</h1>
+								<app-battery></app-battery>
+								<div class="mb-4"></div>
 							</div>
 
 
